--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,81 @@
+@import url('https://fonts.googleapis.com/css2?family=Space+Mono:wght@700&display=swap');
+/* The link above is for Space Mono font-family */
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Space Mono';
+}
+body{
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+}
+h1{
+    margin-top: -100px;
+}
+section{
+    width: 95%;
+    min-height: 30%;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin-bottom: 200px;
+}
+section .item{
+    position: relative;
+    width: 32%;
+    min-height: 100%;
+    background-color: rgba(56, 56, 56, 0.582);
+    border: 1px solid black;
+    padding: 15px;
+}
+section .item h2{
+    position: absolute;
+    width: 40% ;
+    height: 20%;
+    border: 1px solid black;
+    top:0;
+    right: 0;
+    text-align: center;
+    text-transform: capitalize;
+}
+section .item h2#chicken{
+    background-color:coral;
+}
+section .item h2#beef{
+    background-color:royalblue;
+}
+section .item h2#sushi{
+    background-color: violet;
+}
+section .item p{
+    position: absolute;
+    top: 40px;
+}
 
+/* For tablets */
+@media only screen and (max-width:992px){
+    section .item{
+        width: 49%;
+        margin-bottom: 20px;
+    }
+    section .item:nth-of-type(3){
+        width: 100%;
+    }
+}
+
+/* For mobile phones */
+@media only screen and (max-width:768px){
+    section{
+        margin-top:-150px;
+    }
+    section .item{
+        width: 100%;
+        margin-bottom: 20px;
+        overflow: scroll;
+    }
+    
+}
